--- a/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">OpenSim.WebServer.App</a>
+            <a class='navbar-brand' [routerLink]="['/home']">Open Sim</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
@@ -18,15 +18,33 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                    <a [routerLink]="['/servers']">
+                        <span class='glyphicon glyphicon-play'></span> Servers
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/simulations']">
+                        <span class='glyphicon glyphicon-cog'></span> Simulations
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/custom_simulation']">
+                        <span class='glyphicon glyphicon-upload'></span> Craft Your Sim
+                    </a>
+                </li>
+                <li>
+                    <br />
+                </li>
+                <!--<li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/counter']">
+                        <span class='glyphicon glyphicon-education'></span> Counter
+                    </a>
+                </li>-->
+                <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
