dummy angular view for list of servers

--- a/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/servers']">
+                    <a [routerLink]="['/server']">
                         <span class='glyphicon glyphicon-play'></span> Servers
                     </a>
                 </li>
@@ -40,11 +40,11 @@
                         <span class='glyphicon glyphicon-education'></span> Counter
                     </a>
                 </li>-->
-                <!--<li [routerLinkActive]="['link-active']">
+                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
-                </li>-->
+                </li>
             </ul>
         </div>
     </div>
