--- a/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
@@ -32,19 +32,19 @@
                         <span class='glyphicon glyphicon-upload'></span> Craft Your Sim
                     </a>
                 </li>
-                <li>
+                <!--<li>
                     <br />
-                </li>
+                </li>-->
                 <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/counter']">
                         <span class='glyphicon glyphicon-education'></span> Counter
                     </a>
                 </li>-->
-                <li [routerLinkActive]="['link-active']">
+                <!--li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
-                </li>
+                </li-->
             </ul>
         </div>
     </div>
