--- a/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.css
@@ -20,14 +20,13 @@
 
 .column-name {
     float: left;
-    width: 40%;
+    /*width: 40%;*/
 }
 
 .column-run-status {
     float: left;
     width: auto;
     margin: 0 2%;
-    grid-column: 2;
 }
 
 .column-run-status-running {
@@ -40,10 +39,10 @@
 
 .column-author {
     float: right;
-    margin: 0 5%
+    margin: 0 5%;
 }
 
-.column-description {
+.description {
     font-size: 70%;
     margin: -24px 0 0 4%;
 }
