basic server details

--- a/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/server']">
+                    <a [routerLink]="['/servers']">
                         <span class='glyphicon glyphicon-play'></span> Servers
                     </a>
                 </li>
