--- a/OpenSim.WebServer.App/ClientApp/app/components/server/server.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/server/server.component.css
@@ -1,39 +1,31 @@
-#simulations-container {
+.item-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
 }
 
-.simulation {
-    width: 300px;
-    height: 300px;
-    background-color: rgba(81, 143, 183, 0.69);
+.item {
+    width: 95%;
+    height: 95%;
+    display: block;
+    object-fit: cover;
     border-radius: 10px;
     overflow: hidden;
     padding: 5%;
-    margin: 20px;
 }
 
 .simulation-link {
     text-decoration: none;
 }
 
-#presentations-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+.simulation {
+    background-color: rgba(81, 143, 183, 0.69);
 }
 
 .presentation {
-    width: 300px;
-    height: 300px;
     background-color: rgba(230, 189, 53, 0.65);
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 5%;
-    margin: 20px;
 }
 
-.presentation-link {
+.link {
     text-decoration: none;
 }
