--- a/OpenSim.WebServer.App/ClientApp/app/components/server/server.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/server/server.component.css
@@ -1,3 +1,24 @@
+#name {
+    float: left;
+}
+
+#run-status {
+    float: left;
+    margin: 2em;
+}
+
+.run-status-running {
+    color: #317a13;
+}
+
+.run-status-stopped {
+    color: #ef4e38;
+}
+
+#description {
+    clear:both;
+}
+
 .item-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
