an attempt of denamically e,bedded relations

--- a/OpenSim.WebServer.App/ClientApp/app/components/presentation/presentation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/presentation/presentation.component.html
@@ -20,7 +20,7 @@
 
     <section class="item-container">
         <figure class="simulation item" *ngFor="let simulation of server.simulations">
-            <a class="simulation-link link" href="simulation\{{ simulation.id }}">{{ simulation.name }}</a>
+            <a class="simulation-link link" routerLink="{{ simulation.id }}">{{ simulation.name }}</a>
 
             <p>{{ simulation.description }}</p>
         </figure>
