--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.css
@@ -1,4 +1,4 @@
-#name {
+/*#name {
     float: left;
 }
 
@@ -83,4 +83,4 @@
 .divider > span:after {
     left: 100%;
     margin-left: 15px;
-}
+}*/
