--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
@@ -5,47 +5,38 @@
 
     <p>
         <span>By </span>
-        <a routerLink="{{ simulation.author.name }}">{{ simulation.author.name }}.</a>
-        <span>{{ simulation.author.description }} </span>
+        <a routerLink="{{ simulation._embedded.author._links.self.href }}">{{ simulation._embedded.author.name }}.</a>
+        <span>{{ simulation._embedded.author.description }} </span>
     </p>
+    
+    <p class="group-header" *ngIf="simulation._embedded.references">Referenced Simulations</p>
+    <ul *ngIf="simulation._embedded.references">
+        <li class="item" item *ngFor="let reference of simulation._embedded.references">
+            <a class="item-name" href="{{ reference._links.self.href }}">{{reference.name }}</a>
+            <!--<div class="item-author">
+                <span>{{ reference.author.name }}</span>
+            </div>-->
+        </li>
+    </ul>
 
-    <p>Referenced Simulations</p>
+    <p class="group-header" *ngIf="simulation._embedded.consumers">Consumed by</p>
+    <ul *ngIf="simulation._embedded.consumers">
+        <li class="item" item *ngFor="let consumer of simulation._embedded.consumers">
+            <a class="item-name" href="{{ consumer._links.self.href }}">{{consumer.name }}</a>
+            <!--<div class="item-author">
+                <span>{{ consumer.author.name }}</span>
+            </div>-->
+        </li>
+    </ul>
 
-    <expandable-list>
-        <expandable-list-item>
-            <div item *ngFor="let reference of simulation.references">
-                <a class="item-name" routerLink="{{ reference.id }}">{{reference.name }}</a>
-                <div class="item-author">
-                    <span>{{ reference.author.name }}</span>
-                </div>
-            </div>
-        </expandable-list-item>
-    </expandable-list>
-
-    <!--<p>Consumed by</p>
-
-    <expandable-list>
-        <expandable-list-item>
-            <div item *ngFor="let consumer of simulation.consumers">
-                <a class="item-name" routerLink="{{ consumer.id }}">{{consumer.name }}</a>
-                <div class="item-author">
-                    <span>{{ consumer.author.name }}</span>
-                </div>
-            </div>
-        </expandable-list-item>
-    </expandable-list>-->
-
-    <p>Presentations</p>
-
-    <expandable-list>
-        <expandable-list-item>
-            <div item *ngFor="let presentation of simulation.presentations">
-                <a class="item-name" routerLink="{{ presentation.id }}">{{presentation.name }}</a>
-                <div class="item-author">
-                    <span>{{ presentation.author.name }}</span>
-                </div>
-            </div>
-        </expandable-list-item>
-    </expandable-list>
+    <p class="group-header" *ngIf="simulation._embedded.presentations">Presentations</p>
+    <ul *ngIf="simulation._embedded.presentations">
+        <li class="item" item *ngFor="let presentation of simulation._embedded.presentations">
+            <a class="item-name" href="{{ presentation._links.self.href }}">{{presentation.name }}</a>
+            <!--<div class="item-author">
+                <span>{{ presentation.author.name }}</span>
+            </div>-->
+        </li>
+    </ul>
 </div>
 
