--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.css
@@ -1,5 +1,14 @@
-.item {
-    list-style: none;
+.items-container {
+    display: grid;
+    grid-template-columns: 40% auto;
+}
+
+.item-name {
+    grid-column: 1/1;
+}
+
+.item-author {
+    grid-column: 2/2;
 }
 
 .group-header {
