--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
@@ -9,34 +9,34 @@
         <span>{{ simulation._embedded.author.description }} </span>
     </p>
     
-    <p class="group-header" *ngIf="simulation._embedded.references">Referenced Simulations</p>
-    <ul *ngIf="simulation._embedded.references">
-        <li class="item" item *ngFor="let reference of simulation._embedded.references">
+    <p class="group-header" *ngIf="simulation._embedded.references">Referenced By</p>
+    <div class="items-container" *ngIf="simulation._embedded.references">
+        <ng-container *ngFor="let reference of simulation._embedded.references">
             <a class="item-name" href="{{ reference._links.self.href }}">{{reference.name }}</a>
-            <!--<div class="item-author">
-                <span>{{ reference.author.name }}</span>
-            </div>-->
-        </li>
-    </ul>
+            <div class="item-author">
+                <span>{{ reference._embedded.author.name }}</span>
+            </div>
+        </ng-container>
+    </div>
 
     <p class="group-header" *ngIf="simulation._embedded.consumers">Consumed by</p>
-    <ul *ngIf="simulation._embedded.consumers">
-        <li class="item" item *ngFor="let consumer of simulation._embedded.consumers">
+    <div class="items-container" *ngIf="simulation._embedded.consumers">
+        <ng-container *ngFor="let consumer of simulation._embedded.consumers">
             <a class="item-name" href="{{ consumer._links.self.href }}">{{consumer.name }}</a>
-            <!--<div class="item-author">
-                <span>{{ consumer.author.name }}</span>
-            </div>-->
-        </li>
-    </ul>
+            <div class="item-author">
+                <span>{{ consumer._embedded.author.name }}</span>
+            </div>
+        </ng-container>
+    </div>
 
     <p class="group-header" *ngIf="simulation._embedded.presentations">Presentations</p>
-    <ul *ngIf="simulation._embedded.presentations">
-        <li class="item" item *ngFor="let presentation of simulation._embedded.presentations">
+    <div class="items-container" *ngIf="simulation._embedded.presentations">
+        <ng-container *ngFor="let presentation of simulation._embedded.presentations">
             <a class="item-name" href="{{ presentation._links.self.href }}">{{presentation.name }}</a>
-            <!--<div class="item-author">
-                <span>{{ presentation.author.name }}</span>
-            </div>-->
-        </li>
-    </ul>
+            <div class="item-author">
+                <span>{{ presentation._embedded.author.name }}</span>
+            </div>
+        </ng-container>
+    </div>
 </div>
 
