--- a/OpenSim.WebServer.App/ClientApp/app/components/simulations/simulations.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulations/simulations.component.css
@@ -14,4 +14,20 @@
     overflow: hidden;
     padding: 5%;
     background-color: rgba(81, 143, 183, 0.69);
+    display: flex;
+    flex-direction: column;
 }
+
+.presentations {
+}
+
+.presentations expandable-list-item {
+    background-color: rgba(230, 189, 53, 0.65);
+    border-radius: 6px;
+    margin-bottom: 1em;
+}
+
+.presentation {
+    margin-left: 1em; 
+}
+
