--- a/OpenSim.WebServer.App/ClientApp/app/components/simulations/simulations.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulations/simulations.component.html
@@ -2,7 +2,19 @@
     <section class="item-container">
         <figure class="item" *ngFor="let simulation of simulations">
             <a class="link" href="{{ simulation._links.self.href }}">{{ simulation.name }}</a>
-            <p>{{ simulation.description }}</p>
+            <p class="description">{{ simulation.description }}</p>
+            
+            <div class="presentations">
+                <expandable-list>
+                    <expandable-list-item>
+                        <span title>Presentations</span>
+                
+                        <div item *ngFor="let presentation of simulation._embedded.presentations">
+                            <a class="presentation" href="{{ presentation._links.self.href }}">{{ presentation.name }}</a>
+                        </div>
+                    </expandable-list-item>
+                </expandable-list>
+            </div>
         </figure>
     </section>
 </div>
