--- a/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
@@ -22,6 +22,6 @@
         </div>
     </div>
     
-    <new-server id="new-server-form"></new-server>
+    <new-server-form id="new-server-form"></new-server-form>
 </div>
 
